--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,9 +48,10 @@ jobs:
           echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
           
       - name: Setup Supabase CLI
-        uses: supabase/cli-action@v1
-        with:
-          version: latest
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          npm install -g supabase
 
       - name: Upload backup to Supabase Storage
         env:
