--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,8 @@ jobs:
           DB_NAME: ${{ secrets.PROD_DB_NAME }}
         run: |
           mkdir -p Auto-Backup
-          TIMESTAMP=$(date +"%Y-%m-%d_%I-%M-%S%p")
+          TIMESTAMP=$(TZ="America/New_York" date +"%Y-%m-%d_%I-%M-%S%p")
+
 
           # Full dump (data+schema) compressed
           PGPASSWORD=$DB_PASSWORD pg_dump \
