--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -100,10 +100,14 @@ jobs:
             -H "apikey: $SERVICE_ROLE_KEY")
           echo "Raw response from Supabase storage API:"
           echo "$resp" | jq .
-          
+          # Check if bucket exists
+          if echo "$RAW_RESPONSE" | jq -e '.message? == "Bucket not found"' >/dev/null; then
+            echo "⚠️ Bucket 'backups' not found — skipping cleanup."
+            exit 0
+          fi
           # Extract unique backup folder names (prefix before first slash)
-          folders=$(echo "$resp" | jq -r '.data | map(.name) | map(split("/") | .[0]) | unique | .[]' | grep '^backup_')
 
+          folders=$(echo "$resp" | jq -r '.data | map(.name) | map(split("/") | .[0]) | unique | .[]' | grep '^backup_')
           # Check if we got folders
           if [ -z "$folders" ]; then
             echo "No backup folders found."
