--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Supabase Migrations
 
 on:
-  workflow_dispatch: # run manually
+  workflow_dispatch: # run manually for now
   push:
     branches: [ "main" ]
 
@@ -19,8 +19,9 @@ jobs:
 
       - name: Generate migration from Test DB
         run: |
+          TIMESTAMP=$(date +%s)
           supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} \
-            --use-migra > supabase/migrations/$(date +%s)_auto.sql
+            --use-migra > supabase/migrations/${TIMESTAMP}_auto.sql
 
       - name: Commit migration
         uses: stefanzweifel/git-auto-commit-action@v5
