--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,11 @@ jobs:
 
       - name: Install Supabase CLI
         run: |
-          brew install supabase/tap/supabase
+          curl -sL https://github.com/supabase/cli/releases/latest/download/supabase_linux_amd64.tar.gz -o supabase.tar.gz
+          tar -xzf supabase.tar.gz
+          sudo mv -f supabase /usr/local/bin/supabase
+          rm supabase.tar.gz
+
 
 
       - name: Generate migration from Test DB
@@ -37,7 +41,11 @@ jobs:
 
       - name: Install Supabase CLI
         run: |
-          brew install supabase/tap/supabase
+          curl -sL https://github.com/supabase/cli/releases/latest/download/supabase_linux_amd64.tar.gz -o supabase.tar.gz
+          tar -xzf supabase.tar.gz
+          sudo mv -f supabase /usr/local/bin/supabase
+          rm supabase.tar.gz
+
 
 
       - name: Apply migrations to Prod
