--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,15 @@ jobs:
           TIMESTAMP=$(date +%s)
           supabase db diff --db-url ${{ secrets.SUPABASE_TEST_DB_URL }} --use-migra > supabase/migrations/${TIMESTAMP}_auto.sql
 
-      - name: Commit migration
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: add migration from Test DB"
+      - name: Commit and push migration
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add supabase/migrations/*.sql
+          git diff --cached --quiet || git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
 
   deploy-to-prod:
     needs: generate-migration
