--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add supabase/migrations/*.sql
           git diff --cached --quiet || git commit -m "chore: add migration from Test DB $(date +'%Y-%m-%d %H:%M:%S')"
-          git push origin HEAD:${GITHUB_REF#refs/heads/}
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
 
   deploy-to-prod:
     needs: generate-migration
